--- a/svgdom/test_package/CMakeLists.txt
+++ b/svgdom/test_package/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(PackageTest CXX)
+project(svgdom_test CXX)
 cmake_minimum_required(VERSION 2.8.12)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(example example.cpp)
-target_link_libraries(example ${CONAN_LIBS})
+add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
