--- a/zbar/test_package/CMakeLists.txt
+++ b/zbar/test_package/CMakeLists.txt
@@ -8,7 +8,4 @@ conan_basic_setup()
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-target_compile_definitions(${PROJECT_NAME}
-    PRIVATE QR_CODE_FILE=${CMAKE_SOURCE_DIR}/test.png
-)
-target_link_libraries(${PROJECT_NAME} opencv_imgcodecs opencv_imgproc opencv_core libpng libjasper libtiff libwebp IlmImf ippicv zbar jpeg z dl pthread)
+target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
